# BlankSlate_

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
BlankSlateCore/: CMakeLists.txt
BlankSlateCore/source/: BlankSlate.h
BlankSlateCore/source/BlankSlate/: Application.cpp  Application.h  Core.h  EntryPoint.h
BlankSlateSandbox/: CMakeLists.txt
BlankSlateSandbox/source/: SandboxApplication.cpp
